# ragGroundTruthGenerator

./: .gitignore  AUTH_UPDATES.md  CLEANUP_PLAN.md  DOCKER-SETUP-SUMMARY.md  LICENSE  README-docker.md  README.md  TODO.md  backend-refactoring-phase1.md  check-collections.sh  docker-compose.yml  frontend-refactoring-plan.md  june5_document_updates.md  project-status.sh  refactoring-backend.md  start_app.sh
backend/: .dockerignore  .gitignore  Dockerfile  README.md  README_new.md  app.py  check_imports.py  debug_app_startup.py  pyproject.toml  run.sh  run_tests.sh  run_with_error_handling.py  start_server.sh  test_app_import.py  test_docker.sh  test_frontend_connectivity.sh  test_server.sh
backend/debug_tools/: README.md  debug_app.py  debug_auth.py  debug_collections_routing.py  debug_memory_db.py  debug_qa_pairs.py
backend/docs/: architecture.md  backend_architecture.md
backend/providers/: __init__.py  base_data_source_provider.py  database.py  demo_generator.py  enhanced_database.py  factory.py  generation_manager.py  memory_data_source_provider.py  memory_db.py  response_logging.py  simple_auth.py  template_generator.py  template_retriever.py
backend/providers/auth/: README.md  __init__.py  base.py  simple_auth.py
backend/providers/data_sources/: README.md  __init__.py  base.py  memory.py
backend/providers/database/: README.md  __init__.py  base.py  enhanced_memory.py  memory.py  memory.py.bak
backend/providers/generation/: README.md  __init__.py  (+2 more)
backend/routers/: auth.py  collections.py  generation.py  retrieval.py
backend/tests/: conftest.py
(+230 files in other folders)
